samples/_failures_safe/1761473259_9c3bf8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a42fb452.c: In function ‘main’:
./samples/SAFE/__tmp_a42fb452.c:145:35: error: missing terminating " character
  145 |         int result = sscanf(line, "%31s %15s %255[^\n
      |                                   ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a42fb452.c:145:9: error: expected expression at end of input
  145 |         int result = sscanf(line, "%31s %15s %255[^\n
      |         ^~~
./samples/SAFE/__tmp_a42fb452.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a42fb452.c:145:9: error: expected declaration or statement at end of input
